--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
   <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Kafka Streams Quickstart :: Java</name>
+
+  <scm>
+    <connection>scm:git:git://github.com/paulmillar/dynamic-processing.git</connection>
+    <developerConnection>scm:git:git@github.com:paulmillar/dynamic-processing.git</developerConnection>
+    <url>http://github.com/paulmillar/dynamic-processing</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <kafka.version>2.0.0</kafka.version>
@@ -77,7 +85,7 @@
 	    </goals>
 	  </execution>
 	</executions>
-      </plugin>      
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
