--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <artifactId>dynamic-processing</artifactId>
   <version>0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <name>Kafka Streams Quickstart :: Java</name>
+  <name>Dynamic Processing</name>
 
   <scm>
     <connection>scm:git:git://github.com/paulmillar/dynamic-processing.git</connection>
