--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.dcache.kafka</groupId>
   <artifactId>dynamic-processing</artifactId>
-  <version>0.2</version>
+  <version>0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Dynamic Processing</name>
 
@@ -27,7 +27,7 @@
     <connection>scm:git:git://github.com/paulmillar/dynamic-processing.git</connection>
     <developerConnection>scm:git:git@github.com:paulmillar/dynamic-processing.git</developerConnection>
     <url>http://github.com/paulmillar/dynamic-processing</url>
-    <tag>v0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
